--- a/assets/main.scss
+++ b/assets/main.scss
@@ -68,8 +68,8 @@
         display: none;
 }
 
-.wrapper {
-        border-bottom:  2px dashed #0BB1D9;
+.site-header {
+        border-bottom:  1px dashed #0BB1D9;
 }
 
 .post-link {
