--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,12 +2,8 @@
 
   <div class="wrapper">
     <div class="footer-col-wrapper">
-      <p>
-        Find me: <a href="https://www.linkedin.com/in/stefnestor">LinkedIn</a>, <a href="https://github.com/stefnestor">Github</a>, & <a href="https://medium.com/@stefnestor">Medium</a>.
-      </p>
-      <br />
-      <p class="rss-subscribe">Subscribe <a href="{{ "/feed.xml" | relative_url }}">using RSS</a>.</p>
-      <div class="footer-licence">&copy; Stef Nestor. This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.</div>
+      <p>Subscribe <a href="{{ "/feed.xml" | relative_url }}">using RSS</a> or find me @ [<a href="https://www.linkedin.com/in/stefnestor">LinkedIn</a>, <a href="https://github.com/stefnestor">Github</a>, <a href="https://medium.com/@stefnestor">Medium</a>].</p>
+      <div class="footer-licence">Copyright &copy; Stef Nestor. This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a>.</div>
     </div>
   </div>
 
