--- a/assets/main.scss
+++ b/assets/main.scss
@@ -68,9 +68,11 @@
         display: none;
 }
 
+/*
 .site-header {
         border-bottom:  1px dashed #0BB1D9;
 }
+*/
 
 .post-link {
         color: #0BB1D9;
@@ -78,4 +80,8 @@
 
 .post-link:hover {
         text-decoration: none;
+}
+
+.footer-license {
+        font-size: .8rem;       
 }
