--- a/assets/main.scss
+++ b/assets/main.scss
@@ -74,7 +74,7 @@
 }
 */
 
-.post-link {
+a > .post-link {
         color: #0BB1D9;
 }
 
@@ -83,5 +83,5 @@
 }
 
 .footer-license {
-        font-size: .8rem;       
+        font-size: .5rem;       
 }
